--- a/index.html/index.html
+++ b/index.html/index.html
@@ -2,7 +2,7 @@
 <body>
 
 <h1 align="center">"HONOURABLE MENTION"</h1>
-<img src="D:\index1.html/m.jpeg"
+<img src="D:\index.html/m.jpeg"
 width="300px">
 
 </body>
